--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -2,12 +2,24 @@
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  width: 50%;
-  margin: 0.5rem 0.5rem 0 auto;
+  padding: 2rem;
 }
 .links {
   display: none;
 }
 .open {
   display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-flow: column;
+  height: 100vh;
+  width: 100vw;
+  position: fixed;
+  z-index: 99999;
+  background-color: #f4faff;
+}
+.open .link {
+  margin: 2rem 0;
+  text-decoration: none;
+  color: #4f646f;
 }
