--- a/src/styles/home.less
+++ b/src/styles/home.less
@@ -1,4 +1,13 @@
 .home {
   background-color: #4f646f;
   height: 100vh;
+  .images {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-flow: column;
+    img {
+      border-radius: 50%;
+    }
+  }
 }
