--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -3,8 +3,9 @@
   height: 100vh;
 }
 .home .images {
+  height: 85vh;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
   flex-flow: column;
 }
