--- a/src/styles/home.less
+++ b/src/styles/home.less
@@ -2,8 +2,9 @@
   background-color: #4f646f;
   height: 100vh;
   .images {
+    height: 85vh;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
     flex-flow: column;
     img {
