--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -1,6 +1,6 @@
 .icon-bar {
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   align-items: center;
   padding: 2rem;
 }
