--- a/src/styles/navbar.less
+++ b/src/styles/navbar.less
@@ -2,7 +2,16 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 2rem;
+  padding: 1rem;
+  @media screen and (min-width: 1586px) {
+    padding: 2rem;
+  }
+  h3 {
+    color: whitesmoke;
+  }
+  .icon {
+    color: whitesmoke;
+  }
 }
 .links {
   display: none;
